--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
 #mainhead{
   font-family: Montserrat;
   text-align: center;
-  color: white;
+  color: #ffffff;
 }
 #infop{
  font-family: Open Sans;
  text-align: center;
- color: white;
+ color: #ffffff;
 }
 body{
-background-color: black;
+background-color: #000000;
 }
 .header {
  padding: 60px;
  text-align: center;
  background: #1abc9c;
- color: white;
+ color: #ffffff;
  font-size: 30px;
 }
