--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-#mainhead{
+#main{
   font-family: Montserrat;
   text-align: center;
   color: #ffffff;
@@ -9,6 +9,12 @@
  font-family: Open Sans;
  text-align: center;
  color: #ffffff;
+}
+#infop2{
+ font-family: Open Sans;
+ text-align: center;
+ color: #ffffff;
+ background-clor: #1abc9c;
 }
 body{
 background-color: #000000;
