--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
  font-family: Open Sans;
  text-align: center;
  color: #ffffff;
- background-clor: #1abc9c;
+ background-color: #1abc9c;
 }
 body{
 background-color: #000000;
