--- a/upload.css
+++ b/upload.css
@@ -19,7 +19,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-html,body{
+html,{
   display: grid;
   height: 100%;
   place-items: center;
@@ -35,7 +35,7 @@ html,body{
   height: 300px;
   width: 100%;
   border-radius: 10px;
-  background: #fff;
+  background: black;
   border: 2px dashed #c2cdda;
   display: flex;
   align-items: center;
@@ -88,7 +88,7 @@ html,body{
   width: 100%;
   padding: 8px 0;
   font-size: 18px;
-  color: #fff;
+  color: black;
   display: none;
   background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
 }
@@ -103,7 +103,7 @@ html,body{
   border: none;
   outline: none;
   border-radius: 25px;
-  color: #fff;
+  color: black;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
