--- a/upload.css
+++ b/upload.css
@@ -12,6 +12,10 @@
         text-align: center;
         color: #ffffff;
       }
+body{
+  background-color: black;
+  text-align: center;
+}
       @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
@@ -19,7 +23,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-html,{
+html{
   display: grid;
   height: 100%;
   place-items: center;
