--- a/upload.css
+++ b/upload.css
@@ -15,13 +15,12 @@
 body{
   background-color: black;
   text-align: center;
-}
-      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: Open Sans;
 }
 html{
   display: grid;
