--- a/upload.css
+++ b/upload.css
@@ -6,6 +6,7 @@
       background: #1abc9c;
       color: #ffffff;
       font-size: 30px;
+      font-family: Montserrat;
      }
       #mainpara{
         font-family: Open Sans;
